@@ -123,12 +123,6 @@ static void usage(FILE *fp)
 "     view           SAM<->BAM<->CRAM conversion\n"
 "     depad          convert padded BAM to unpadded BAM\n"
 "\n");
-#ifdef _WIN32
-    fprintf(fp,
-"Note: The Windows version of SAMtools is mainly designed for read-only\n"
-"      operations, such as viewing the alignments and generating the pileup.\n"
-"      Binary files generated by the Windows version may be buggy.\n\n");
-#endif
 }
 
 // This is a tricky one, but on Windows the filename wildcard expansion is done by
