@@ -140,7 +140,13 @@ differentiate similar IDs.
 If this option is set, it will allows user to specify customized index file location(s) if the data 
 folder does not contain any index file. See
 .B EXAMPLES
-section for sample of useage.
+section for sample of usage.
+.TP
+.BI -L \ FILE
+BED file for specifying multiple regions on which the merge will be performed.
+This option extends the usage of
+.B -R
+option and cannot be used concurrently with it.
 .TP
 .BI --no-PG
 Do not add a @PG line to the header of the output file.
